--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pinia": "^3.0.3",
     "sass-embedded": "^1.93.2",
     "vue": "^3.5.18",
+    "vue-i18n": "^11.1.12",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
