--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on:
     push:
         branches: [master]
     pull_request:
+        branches: [master]
 
 jobs:
     build-and-test:
@@ -21,12 +22,12 @@ jobs:
                   cache: 'npm'
 
             - name: Install dependencies
-              run: npm install
+              run: npm ci
 
             - name: Run lint
               run: npm run lint
 
-            - name: Run tests
+            - name: Run unit tests
               run: npm run test:unit
 
             - name: Run build
